--- a/apps/plasmids/templates/plasmids/plasmid_detail.html
+++ b/apps/plasmids/templates/plasmids/plasmid_detail.html
@@ -1,12 +1,22 @@
 {% extends "core/base.html" %}
+{% load static %}
 
 {% block title %}Plasmid detail{% endblock %}
 
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/plasmid.css' %}">
+{% endblock %}
+
 {% block content %}
 
-<div style="display: flex; justify-content: space-between; align-items: center;">
-    <h1>{{ plasmid.identifier }}</h1>
-    <a class="btn" href="{% url 'plasmids:plasmid_list' %}">Back to Plasmid List</a>
+<!-- Header -->
+<div class="plasmid-header">
+    <div style="display:flex; justify-content:space-between; align-items:center;">
+        <h1>{{ plasmid.identifier }}</h1>
+        <a class="btn" href="{% if request.META.HTTP_REFERER %}{{ request.META.HTTP_REFERER }}{% else %}{% url 'plasmid_list' %}{% endif %}">
+            Back
+        </a>    
+    </div>
 </div>
 
 <br>
@@ -210,8 +220,8 @@
         Annotations
     </h2><br>
 
-    <div class="card-content">
-        <table class="plasmid-table">
+    <div class="card">
+        <table class="plasmid-table with-columns">
             <thead>
                 <tr>
                     <th>Label</th>
@@ -284,8 +294,3 @@ document.querySelectorAll(".card-toggle").forEach(header => {
 
 
 {% endblock %}
-
-
-
-
-
